--- a/style.css
+++ b/style.css
@@ -280,6 +280,12 @@ img:hover{
     } header{
         flex-direction: column;
         align-items: center;
+    } 
+    .hero-h1{
+        font-size: 3rem;
+    }
+    .hero-p{
+        font-size: 14px;
     }
 
 }
