--- a/style.css
+++ b/style.css
@@ -224,7 +224,9 @@ footer{
     justify-content: space-between;
     align-items: center;
 }
-
+a:hover{
+    opacity: 70%;
+}
 .nav-child:hover{
     opacity: 70%;
     border-bottom: 2px solid #333333;
